k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guidebook
  labels:
    app: guidebook
